[project]
name = "openenv_customer_support"
version = "0.1.0"
description = "OpenEnv Customer Support Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[tool.openenv]
entrypoint = "app.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
